...
        }
    }

    Scaffold(
        modifier = Modifier
            .fillMaxSize()
            .testTag("swipe_refresh"),
        topBar = {
            CenterAlignedTopAppBar(
                colors = TopAppBarDefaults.topAppBarColors(
                    containerColor = MaterialTheme.colorScheme.background,
                    titleContentColor = MaterialTheme.colorScheme.primary,
                ),
...
        ) {
            when (coinMarketState) {
                is CoinMarketState.Loading -> {
                    CircularProgressIndicator(
                        modifier = Modifier
                            .align(Alignment.Center)
                            .testTag("loading_indicator")
                    )
                }

                is CoinMarketState.Success -> {
                    val coinList = coinMarketState.coins
                    val isRefreshing = coinViewModel.isRefreshing
...
