...
                textAlign = TextAlign.Center
            )
            Button(
                modifier = Modifier
                    .fillMaxWidth(fraction = 0.5f)
                    .padding(top = 24.dp)
                    .testTag("retry_button"),
                onClick = onRefresh,
            ) {
                Text(text = stringResource(R.string.retry))
            }
        }
    }
...
